fixed some small bugs and removed scrollbar from chat

--- a/packages/frontend/app/globals.css
+++ b/packages/frontend/app/globals.css
@@ -295,3 +295,9 @@ It is used for displaying markdown nicely inside any <Markdown> components
   margin-top: inherit;
   margin-bottom: inherit;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+  width: 0px;
+  height: 0px;
+}
